Optimized the Footer section in the Index.html file

--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Multiple dollar signs with a cogwheel behind it" />
             <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise you page.
             </p>
         </div>
     </aside>
-    <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
-        <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
-        </p>
-    </div>
+<footer>
+    <h2>Made with ❤️ by Horiseon</h2>
+    <p>
+        &copy; 2019 Horiseon Social Solution Services, Inc.
+    </p>
+</footer>
 </body>
 
 </html>
