--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en-us">
 
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon</title>
+    <title>Marketing Landing Page</title>
 </head>
 
 <body>
@@ -18,56 +18,60 @@
             </ul>
         </nav>
     </header>
-    <div class="hero">
-    </div>
 <main>
-    <section id="search-engine-optimization" class="service">
-        <img src="./assets/images/search-engine-optimization.jpg" alt="Notebook showing concepts of a search engine on a wooden table." class="float-left" />
-        <h2>Search Engine Optimization</h2>
+    <img class="hero" role="img" aria-label="Marketing Team Meeting">
+</main>
+
+<section>
+    <div>
+        <img src="./assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization" class="float-left" />
+        <h2 id="search-engine-optimization">Search Engine Optimization</h2>
         <p>
-            The dominance of mobile internet use means that users are searching for the right business as they travel,shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+            The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
         </p>
-    </section>
-    <section id="online-reputation-management" class="service">
-        <img src="./assets/images/online-reputation-management.jpg" alt="Laptop showing a graph of increasing online reputation." class="float-right" />
-        <h2>Online Reputation Management</h2>
+    </div>
+
+    <div>
+        <img src="./assets/images/online-reputation-management.jpg" alt="Online Reputation Management Piece Here" class="float-right" />
+        <h2 id="online-reputation-management">Online Reputation Management</h2>
         <p>
             The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
         </p>
-    </section>
-    <section id="social-media-marketing" class="service">
-        <img src="./assets/images/social-media-marketing.jpg" alt="People wokring at a wooden table with cut outs of text and pictures" class="float-left" />
-        <h2>Social Media Marketing</h2>
+    </div>
+    <div>
+        <img src="./assets/images/social-media-marketing.jpg" alt="Social Media Marketing Piece Here" class="float-left" />
+        <h2 id="social-media-marketing">Social Media Marketing</h2>
         <p>
             Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
         </p>
-    </section>
-</main>
-    <aside class="benefits">
-        <div class="benefit">
-            <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="Cogwheel being processed into a dollar sign" />
-            <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-            </p>
-        </div>
-        <div class="benefit">
-            <h3> Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="Blacked out lightbuld emitting waves with a human body" />
-            <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
-            </p>
-        </div>
-        <div class="benefit">
-            <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="Multiple dollar signs with a cogwheel behind it" />
-            <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise you page.
-            </p>
-        </div>
-    </aside>
+    </div>
+</section>
+
+<aside>
+    <div>
+        <h3>Lead Generation</h3>
+        <img src="./assets/images/lead-generation.png" alt="Lead Generation Piece Here" />
+        <p>
+            Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
+        </p>
+    </div>
+    <div class="benefit-brand">
+        <h3>Brand Awareness</h3>
+        <img src="./assets/images/brand-awareness.png" alt="Brand Awareness Piece Here" />
+        <p>
+            Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
+        </p>
+    </div>
+    <div class="benefit-cost">
+        <h3>Cost Management</h3>
+        <img src="./assets/images/cost-management.png" alt="Cost Management Piece Here" />
+        <p>
+            As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+        </p>
+    </div>
+</aside>
 <footer>
-    <h2>Made with ❤️ by Horiseon</h2>
+    <h2>Made with ❤️️ by Horiseon</h2>
     <p>
         &copy; 2019 Horiseon Social Solution Services, Inc.
     </p>
