Added Comment sections to all necessary areas in Index.HTML and Style.CSS

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Marketing Landing Page</title>
+    <title>Horiseon</title>
 </head>
 
 <body>
+    <!-- Header -->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
@@ -18,10 +19,11 @@
             </ul>
         </nav>
     </header>
+    <!-- Background Image -->
 <main>
     <img class="hero" role="img" aria-label="Marketing Team Meeting">
 </main>
-
+<!-- Main Content -->
 <section>
     <div>
         <img src="./assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization" class="float-left" />
@@ -46,7 +48,7 @@
         </p>
     </div>
 </section>
-
+<!-- Aside Section -->
 <aside>
     <div>
         <h3>Lead Generation</h3>
@@ -70,6 +72,7 @@
         </p>
     </div>
 </aside>
+<!-- Footer Section -->
 <footer>
     <h2>Made with ❤️️ by Horiseon</h2>
     <p>
