Fixed an issue with GitHub Page not showing the first Image when clicked on the URL

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <!-- Background Image -->
 <main>
-    <img class="hero" role="img" aria-label="Marketing Team Meeting">
+    <img src="./assets/images/digital-marketing-meeting.jpg" alt="Marketing Team meeting">
 </main>
 <!-- Main Content -->
 <section>
